--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,5 +5,31 @@
   },
   "fullName": "Full Name",
   "phoneNumber": "Phone Number",
-  "seeProfileDetails": "See Profile Deteails"
+  "seeProfileDetails": "See Profile Deteails",
+  "loading": "Loading...",
+  "error": "Error",
+  "signUP": "Sign UP",
+  "welcomeBack": "Welcome Back",
+  "helloThereCreateNewAccount": "Hello There, Create New Account?",
+  "signInWithSosialNetwork" : "Sign In With Social Network",
+  "orSignInWithEmail" : " Or Sign In With Email",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "thisFieldCantBeEmpty": "This Field Can't Be Empty",
+  "enterAValidPhoneNumber": "Enter A Valid Phone Number",
+  "enterAValidPEmail": "Enter A Valid Email",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "passwordDoNotMatch": "Password Do Not Match",
+  "byCreatingAnAccountYouAgreeToOur": "By Creating An Account You Agree To Our ",
+  "termsAndCondition": "Terms And Conditions",
+  "alreadyHaveAnAccount": "Already Have An Account?",
+  "signIn": "Sign In",
+  "usernameOrPasswordWrong": "Username Or Password Wrong",
+  "helloThereSignInToContinue": "Hello There Sign In To Continue",
+  "textInput": "Text Input",
+  "forgotYourPassword": "Forgot Your Password?",
+  "orSignInWithSocialNetwork": "Or Sign In With Social Network",
+  "dontHaveAnAccount": "Don't Have Account?",
+  "password": "Password"
 }
