--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -5,5 +5,31 @@
   },
   "fullName": "Nama Lengkap",
   "phoneNumber": "Nomor Telepon",
-  "seeProfileDetails": "Lihat Detail Lebih Jauh"
+  "seeProfileDetails": "Lihat Detail Lebih Jauh",
+  "loading": "Memuat...",
+  "error": "Kesalahan",
+  "signUP": "Bergabung",
+  "welcomeBack": "Selamat Datang Kembali",
+  "helloThereCreateNewAccount": "Hello, Buat Akun Baru?",
+  "signInWithSosialNetwork" : "Masuk Dengan Media Sosial",
+  "orSignInWithEmail" : " Atau Masuk Dengan Email",
+  "firstName": "Nama Depan",
+  "lastName": "Nama Belankang",
+  "thisFieldCantBeEmpty": "Bidang Ini Tidak Boleh Kosong",
+  "enterAValidPhoneNumber": "Masukan Nomor Telepon Yang Valid",
+  "enterAValidEmail": "Masukan Email Yang Valid",
+  "password": "Kata Sandi",
+  "confirmPassword": "Konfirmasi Kata Sandi",
+  "passwordDoNotMatch": "Pasword Tidak Sesuai",
+  "byCreatingAnAccountYouAgreeToOur": "Dengan Membuat Akun Anda Setuju Dengan ",
+  "termsAndCondition": "Syarat Dan Kondisi",
+  "alreadyHaveAnAccount": "Sudah Punya Akun?",
+  "signIn": "Masuk",
+  "usernameOrPasswordWrong": "Nama Pengguna Atau Password Salah",
+  "helloThereSignInToContinue": "Hello, Masuk Untuk Melanjutkan",
+  "textInput": "Masukan Text",
+  "forgotYourPassword": "Lupa Password Anda?",
+  "orSignInWithSocialNetwork": "Atau Masuk Dengan Media Sosial",
+  "dontHaveAnAccount": "Tidak Mempunyai Akun?",
+  "password": "Kata Sandi"
 }
