--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,11 +25,44 @@
   "termsAndCondition": "Terms And Conditions",
   "alreadyHaveAnAccount": "Already Have An Account?",
   "signIn": "Sign In",
+  "signOut": "Sign Out",
   "usernameOrPasswordWrong": "Username Or Password Wrong",
   "helloThereSignInToContinue": "Hello There Sign In To Continue",
   "textInput": "Text Input",
   "forgotYourPassword": "Forgot Your Password?",
   "orSignInWithSocialNetwork": "Or Sign In With Social Network",
   "dontHaveAnAccount": "Don't Have Account?",
-  "password": "Password"
+  "password": "Password",
+  "welcome": "Welcome",
+  "listOfProduct": "List Of Product",
+  "searchOfProduct": "Search Of Product",
+  "productNotFound": "Produck Not Found!",
+  "networkFailurenTryAgain": "Network Failure n Try Again!",
+  "internalServerError": "Internal Server Error",
+  "noConnection": "No Connection",
+  "productsNotFound": "Products not found!",
+  "profileInformation": "Profile Information",
+  "profileUser": "Profile User",
+  "profileUpdatedSuccessfully": "Profile updated successfully!",
+  "profileEdit": "Profile Edit",
+  "confirm": "Confirm",
+  "changePassword": "Change Password",
+  "typeYourNewPassword": "Type Your New Password",
+  "thisFieldCantBeEmpty": "This Field Cant Be Empty",
+  "changePasswordSuccessfully": "Change Password Successfully",
+  "youHaveSuccessfullyChangePassword": "You Have Successfully Change Password",
+  "pleaseUseTheNewPasswordWhenSignIn": "Please use the new password when Sign in",
+  "forgotPassword": "Forgot Password",
+  "typeYourPhoneNumber": "Type Your Phone Number",
+  "weTextedYouACodeToVerifyYourPhoneNumber": "We texted you a code to verify your phone number",
+  "send": "Send",
+  "typeACode": "Type A Code",
+  "code": "Code",
+  "resend": "Resend",
+  "weTextedYouACodeToVerifyYour": "We texted you a code to verify your",
+  "thiscodeWillExpire10MinutesAfterThisMessageIfYouDontGetAMessage": "This code will expire 10 minutes after this message. If you don't get a message.",
+  "editFullName": "Edit Full Name",
+  "save": "Save",
+  "productNotFound": "Product Not Found",
+   "passwordHasBeenChanged": "Password Has Been Changed"
 }
