--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -21,15 +21,48 @@
   "password": "Kata Sandi",
   "confirmPassword": "Konfirmasi Kata Sandi",
   "passwordDoNotMatch": "Pasword Tidak Sesuai",
-  "byCreatingAnAccountYouAgreeToOur": "Dengan Membuat Akun Anda Setuju Dengan ",
+  "byCreatingAnAccountYouAgreeToOur": "Dengan Membuat Akun Anda Setuju Dengan",
   "termsAndCondition": "Syarat Dan Kondisi",
   "alreadyHaveAnAccount": "Sudah Punya Akun?",
   "signIn": "Masuk",
+  "signOut": "Keluar",
   "usernameOrPasswordWrong": "Nama Pengguna Atau Password Salah",
   "helloThereSignInToContinue": "Hello, Masuk Untuk Melanjutkan",
   "textInput": "Masukan Text",
   "forgotYourPassword": "Lupa Password Anda?",
   "orSignInWithSocialNetwork": "Atau Masuk Dengan Media Sosial",
   "dontHaveAnAccount": "Tidak Mempunyai Akun?",
-  "password": "Kata Sandi"
+  "password": "Kata Sandi",
+  "welcome": "Selamat Datang",
+  "listOfProduct": "Daftar produk",
+  "searchOfProduct": "Cari Produk",
+  "productNotFound": "Produck Tidak Ditemukan!",
+  "networkFailurenTryAgain": "Jaringan Gagal Dan Coba Lagi!",
+  "internalServerError": "Kesalahan Server Internal",
+  "noConnection": "Tidak ada Koneksi",
+  "productsNotFound": "Produk Tidak Ditemukan!",
+  "profileInformation": "Informasi Profile",
+  "profileUser": "Profile Pengguna",
+  "profileUpdatedSuccessfully": "Profile Berhasil DiUpdate!",
+  "profileEdit": "Pengeditan Profile",
+  "confirm": "Konfirmasi",
+  "changePassword": "Ganti Password",
+  "typeYourNewPassword": "Ketikan Password Baru",
+  "thisFieldCantBeEmpty": "Kolom Ini Tidak Bisa Kosong",
+  "changePasswordSuccessfully": "password berhasil diganti",
+  "youHaveSuccessfullyChangePassword": "Anda Berhasil Mengganti Password",
+  "pleaseUseTheNewPasswordWhenSignIn": "Mohon Menggunakan Password Baru Saat Masuk",
+  "forgotPassword": "Lupa Password",
+  "typeYourPhoneNumber": "Isi Nomor Telepon Anda",
+  "weTextedYouACodeToVerifyYourPhoneNumber": "Kami mengirimi Anda kode untuk memverifikasi nomor telepon Anda",
+  "send": "Kirim",
+  "typeACode": "Ketikan Code",
+  "code": "kode",
+  "resend": "Kirim Ulang",
+  "weTextedYouACodeToVerifyYour": "Kami mengirimi Anda kode melalui teks untuk memverifikasi",
+  "thiscodeWillExpire10MinutesAfterThisMessageIfYouDontGetAMessage": "Kode ini akan kedaluwarsa 10 menit setelah pesan ini. Jika Anda tidak mendapat pesan.",
+  "editFullName": "Edit Nama Lengkap",
+  "save": "Simpan",
+  "productNotFound": "Produk Tidak ditemukan",
+  "passwordHasBeenChanged": "Password Sudah Diganti"
 }
